platform/networking/network-policies/allow-minio-from-workloads.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-minio
  namespace: minio
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: microbank-dev
    ports:
    - protocol: TCP
      port: 9000
  policyTypes:
  - Ingress
